Add Style And Remove Borders
borders where used mostly for guiding flexbox decisions. Styled the
website a bit so it looks better.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button class="signup">Sign up</button>
             </div>
             <div class="right">
-                <img alt="Image goes here">
+                <img src=conan.jpg alt="Image goes here">
             </div>
         </div>
     </div>
@@ -49,18 +49,23 @@
             </div>
         </div>
         <div class="middle">
-            <div class="text">You cannot pass! I am a servant of the secret fire,
-                wielder of the flame of Anor. The dark fire will not avail you,
-                flame of Udun! Go back to the Shadow... YOU SHALL NOT PASS!
-                -Barack Obama, Ex-President
+            <div class="wrapper">    
+                <div class="text">You cannot pass! I am a servant of the secret fire,
+                    wielder of the flame of Anor. The dark fire will not avail you,
+                    flame of Udun! Go back to the Shadow... YOU SHALL NOT PASS!
+                </div>
+                <div class="subtext">-Barack Obama, 14<span class="superscript">th</span> U.S. President</div>
             </div>
         </div>
         <div class="bottom">
             <div class="popup">
-                <div class="text">Hola. Soy Goku. Estoy luchando una increible pelea contra Majin Buu. 
-                    Necesito tu ayuda! Presiona el boton de Sign up y mandame tu energia! 
-                    Hasta la proxima!
-                </div>
+                <div class="wrapper">
+                    <div class="text">Hola. Soy Goku.
+                    </div>
+                    <div class="subtext"> Estoy luchando una increible pelea contra Majin Buu. 
+                        Necesito tu ayuda! Presiona el boton de Sign up y mandame tu energia! 
+                        Hasta la proxima!</div>
+                </div>  
                 <button class="signup">Sign up</button>
             </div>
         </div>
