--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
         <!-- Header Top -->
         <div class="top">
             <div class="left">
-                <div class="hlogo">Header Logo</div>
+                <div class="hlogo">Safe Website</div>
             </div>
             <div class="right">
-                <a class="hlink">header link one</a>
-                <a class="hlink">header link two</a>
-                <a class="hlink">header link three</a>
+                <a class="hlink">curious</a>
+                <a class="hlink">about us?</a>
+                <a class="hlink">contact</a>
             </div>
         </div>
         <!-- Header Bottom -->
         <div class="bottom">
             <div class="left">
-                <div class="title">This website is awesome</div>
-                <div class="subtitle">This website has some subtext that goes 
-                    here under the main title. It's a smaller
-                    font and the color is lower contrast.
+                <div class="title">Come join us</div>
+                <div class="subtitle">Everyone has a special somebody. They make us laugh, they cheer us up, but most importantly, 
+                    they're there when we need them most. If something terrible were to happen to your special somebody, wouldn't you wish 
+                    you could have prevented it? Sign up.
                 </div>
                 <button class="signup">Sign up</button>
             </div>
             <div class="right">
-                <img src=conan.jpg alt="Image goes here">
+                <img src=./images/conan.jpg alt="Image goes here">
             </div>
         </div>
     </div>
@@ -40,12 +40,12 @@
     <!-- /////////////////////////Content/////////////////////// -->
     <div class="content">
         <div class="top">
-            <div class="title">All the children I love</div>
+            <div class="title">My Favorite Children</div>
             <div class="boxes">
-                <div class="boxwrap"><div class="box"></div><div class="text">Text here</div></div>
-                <div class="boxwrap"><div class="box"></div><div class="text">Text here</div></div>
-                <div class="boxwrap"><div class="box"></div><div class="text">Text here</div></div>
-                <div class="boxwrap"><div class="box"></div><div class="text">Text here</div></div>
+                <div class="boxwrap"><div class="box"><img src="./images/Baby_bop.webp" alt=""></div><div class="text">Honey Boo Boo</div></div>
+                <div class="boxwrap"><div class="box"><img src="./images/penguin.jpeg" alt=""></div><div class="text">Oscar</div></div>
+                <div class="boxwrap"><div class="box"><img src="./images/turtles.jpg" alt=""></div><div class="text">Sergio The Wise</div></div>
+                <div class="boxwrap"><div class="box"><img src="./images/old_man.jpg" alt=""></div><div class="text">Greg (Young at Heart)</div></div>
             </div>
         </div>
         <div class="middle">
