Add Links Improve Style

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <div class="hlogo">Safe Website</div>
             </div>
             <div class="right">
-                <a class="hlink">curious</a>
-                <a class="hlink">about us?</a>
-                <a class="hlink">contact</a>
+                <a href="https://www.youtube.com/watch?v=MtKSbYJFxMc" target="_blank" rel="noopener noreferrer" class="hlink">curious</a>
+                <a href="https://www.youtube.com/watch?v=MtKSbYJFxMc" target="_blank" rel="noopener noreferrer" class="hlink">about us?</a>
+                <a href="https://www.youtube.com/watch?v=MtKSbYJFxMc" target="_blank" rel="noopener noreferrer" class="hlink">contact</a>
             </div>
         </div>
         <!-- Header Bottom -->
@@ -29,10 +29,10 @@
                     they're there when we need them most. If something terrible were to happen to your special somebody, wouldn't you wish 
                     you could have prevented it? Sign up.
                 </div>
-                <button class="signup">Sign up</button>
+                <a href="https://www.youtube.com/watch?v=0acgpCo6HFc" target="_blank" rel="noopener noreferrer"><button class="signup">Sign up</button></a>
             </div>
             <div class="right">
-                <img src=./images/conan.jpg alt="Image goes here">
+                <img class="coco" src=./images/conan.jpg alt="Image goes here">
             </div>
         </div>
     </div>
@@ -42,10 +42,10 @@
         <div class="top">
             <div class="title">My Favorite Children</div>
             <div class="boxes">
-                <div class="boxwrap"><div class="box"><img src="./images/Baby_bop.webp" alt=""></div><div class="text">Honey Boo Boo</div></div>
-                <div class="boxwrap"><div class="box"><img src="./images/penguin.jpeg" alt=""></div><div class="text">Oscar</div></div>
-                <div class="boxwrap"><div class="box"><img src="./images/turtles.jpg" alt=""></div><div class="text">Sergio The Wise</div></div>
-                <div class="boxwrap"><div class="box"><img src="./images/old_man.jpg" alt=""></div><div class="text">Greg (Young at Heart)</div></div>
+                <div class="boxwrap"><a href="https://www.youtube.com/watch?v=MtKSbYJFxMc" target="_blank" rel="noopener noreferrer" class="box"><img src="./images/Baby_bop.webp" alt=""></a><div class="text">Honey Boo Boo</div></div>
+                <div class="boxwrap"><a href="https://www.youtube.com/watch?v=MtKSbYJFxMc" target="_blank" rel="noopener noreferrer" class="box"><img src="./images/penguin.jpeg" alt=""></a><div class="text">Oscar</div></div>
+                <div class="boxwrap"><a href="https://www.youtube.com/watch?v=MtKSbYJFxMc" target="_blank" rel="noopener noreferrer" class="box"><img src="./images/turtles.jpg" alt=""></a><div class="text">Sergio The Wise</div></div>
+                <div class="boxwrap"><a href="https://www.youtube.com/watch?v=MtKSbYJFxMc" target="_blank" rel="noopener noreferrer" class="box"><img src="./images/old_man.jpg" alt=""></a><div class="text">Greg (Young at Heart)</div></div>
             </div>
         </div>
         <div class="middle">
@@ -66,7 +66,7 @@
                         Necesito tu ayuda! Presiona el boton de Sign up y mandame tu energia! 
                         Hasta la proxima!</div>
                 </div>  
-                <button class="signup">Sign up</button>
+                <a href="https://www.youtube.com/watch?v=4kQeq-R1txE" target="_blank" rel="noopener noreferrer"><button class="signup">Sign up</button></a>
             </div>
         </div>
     </div>
