--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         </div>
         <div class="middle">
             <div class="wrapper">    
-                <div class="text">You cannot pass! I am a servant of the secret fire,
+                <div class="text">"I am a servant of the secret fire,
                     wielder of the flame of Anor. The dark fire will not avail you,
-                    flame of Udun! Go back to the Shadow... YOU SHALL NOT PASS!
+                    flame of Udun! Go back to the Shadow... YOU SHALL NOT PASS!"
                 </div>
                 <div class="subtext">-Barack Obama, 14<span class="superscript">th</span> U.S. President</div>
             </div>
